# ft_ping

./: .gitignore  CMakeLists.txt  Makefile
include/: ft_ping.h  parse_args.h
lib/: CMakeLists.txt  parse_args.c  result.c  util.c
src/: CMakeLists.txt  main.c
